--- a/WMS/Views/Theme/Default/WebsiteDeliveryNavigations/Create.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteDeliveryNavigations/Create.cshtml
@@ -9,7 +9,7 @@
 
 
 
-<h2><span>Add Website Delivery Navigation (@ViewBag.SiteName)</span></h2>
+<h2><span>Add USP Bar (@ViewBag.SiteName)</span></h2>
 
 @using (Html.BeginForm())
 {
