--- a/WMS/Views/Theme/Default/WebsiteDeliveryNavigations/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteDeliveryNavigations/Edit.cshtml
@@ -9,7 +9,7 @@
 
 
 
-<h2><span>Edit Website Delivery Navigation (@ViewBag.SiteName)</span></h2>
+<h2><span>Edit USP Bar (@ViewBag.SiteName)</span></h2>
 
 @using (Html.BeginForm())
 {
