--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
@@ -9,18 +9,18 @@
             <img src="@ViewBag.BaseFilePath@siteProperties.Logo" title="@siteProperties.SiteName" alt="@siteProperties.SiteName" />
         </span>
         <div class="nb_firstNav_res_lst_wrap"></div>
-        <button class="nb_lgn_btn_res">Login</button>
+        <button class="nb_lgn_btn_res" onclick="GetLoggedIn(false,true)">Login</button>
     </div>
     <div class="container head-container">
         <div class="search_wrap_main">
-            <form class="form-inline">
+            <div class="form-inline" style="width: 60%">
                 <label class="sr-only" for="searchinput">Name</label>
-                <input type="search" class="form-control search_input text-search" id="searchinput" placeholder="Search Here" onclick="SearchProductCategory();" onkeydown="SearchProduct(event)" />
+                <input type="search" class="form-control search_input text-search" id="searchinput" placeholder="Search Here" />
                 <div class="search-box-buttons float-left">
                     <button type="button" id="serchBtnClose" class="btn btn-primary search_btn">X</button>
-                    <button type="button" id="serchBtnico" class="btn btn-primary search_btn" onclick="SearchProductCategory();" ><i class="icon-search"></i></button>
+                    <a href="javascript:;"  id="serchBtnico" class="btn btn-primary search_btn" onclick="SearchProductCategory();" ><i class="icon-search"></i></a>
                 </div>
-            </form>
+            </div>
         </div>
         <div class="nb_logowrap">
             <a href="@Url.Action("Index","Home")">
