--- a/WMS/Views/Theme/Default/TenantWebsites/Create.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Create.cshtml
@@ -114,6 +114,16 @@
                     @Html.ValidationMessageFor(model => model.WebsiteContactEmail, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.ShowPricesIncludingTax, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.ShowPricesIncludingTax)
+                        @Html.ValidationMessageFor(model => model.ShowPricesIncludingTax, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+
 
         </div>
         <div class="col-md-6 p-0 pull-left mb-2">
