--- a/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_custom.less
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_custom.less
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* Northumbria CSS Document */
 
 @import "normalized.less";
@@ -1152,8 +1152,29 @@
   background: @secondary_color;
 }
 
-.accordion ul li:nth-child(1) {
-  background-image: url("../images/skew_slider_images/image1.jpg");
+.accordion
+ul
+li:nth-child(1) {
+    background-image: url("../images/skew_slider_images/image1.jpg");
+    transform: skew(0deg);
+    right: -45px;
+    width: 22%;
+}
+
+.accordion ul li:nth-child(1) h2 {
+    padding-right: 70px;
+}
+
+.accordion ul li:nth-child(1):after {
+    content: "";
+    width: 10px;
+    height: 100%;
+    background-color: #fff;
+    position: absolute;
+    right: 35px;
+    top: 0;
+    z-index: 10;
+    transform: skew(-12deg);
 }
 
 .accordion ul li:nth-child(2) {
@@ -1169,8 +1190,26 @@
 }
 
 .accordion ul li:nth-child(5) {
-  background-image: url("../images/skew_slider_images/image5.jpg");
+    background-image: url("../images/skew_slider_images/image5.jpg");
+    transform: skew(0deg);
+    left: -45px;
+    z-index: 1;
+    width: 22%;
 }
+
+.accordion ul li:nth-child(5):after {
+    content: "";
+    width: 10px;
+    height: 100%;
+    background-color: #fff;
+    position: absolute;
+    left: 35px;
+    top: 0;
+    z-index: 10;
+    transform: skew(-12deg);
+}
+
+
 .res_navWrapper.show {
   transform: translateX(0px);
 }
